<resources>

    <string name="app_name">Button Listener</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_title">Main Activity Form</string>
    <string name="btn">Tıkla</string>
    <string name="popup_message2">ListView Görünümüne Geçiliyor</string>
    <string name="text_red">red</string>
    <string name="text_green">green</string>
    <string name="text_blue">blue</string>
    <string name="about">About</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="chkIos">IPhone</string>
    <string name="chkAnd">Android</string>
    <string name="chkWin">Windows Mobile</string>
    <string name="display">Display</string>
    <string name="list_view">ListView Görünümü</string>
    <string name="popup_message1">Mehaba. Tıkladığınız butonu myListener dinliyor!</string>

</resources>